[gd_scene load_steps=13 format=4 uid="uid://ihcni3f3j0cy"]

[ext_resource type="PackedScene" uid="uid://cyxrlos5qm1u1" path="res://Scenes/player.tscn" id="1_ebmjs"]
[ext_resource type="Texture2D" uid="uid://cyx5k4qdbet2e" path="res://Assets/BG.png" id="2_qxrlw"]
[ext_resource type="Script" uid="uid://bxt20eqnsqeu7" path="res://Scripts/game_manager.gd" id="3_wrm1d"]
[ext_resource type="FontFile" uid="uid://tr2smmgu7gft" path="res://Assets/Roboto/Roboto-VariableFont_wdth,wght.ttf" id="5_wowpa"]
[ext_resource type="PackedScene" uid="uid://bwnr78myox2a5" path="res://Scenes/apple.tscn" id="6_i6g32"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wrm1d"]
texture = ExtResource("2_qxrlw")
texture_region_size = Vector2i(46, 46)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23, -23, 23, -23, 23, 23, -23, 23)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23, -23, 23, -23, 23, 23, -23, 23)

[sub_resource type="TileSet" id="TileSet_3dryh"]
tile_size = Vector2i(46, 46)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wrm1d")

[sub_resource type="GDScript" id="GDScript_3dryh"]
script/source = "extends TileMapLayer
"

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_wowpa"]
distance = -370.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_i6g32"]
distance = -554.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1l0tm"]
distance = -277.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_v158k"]
distance = -552.0

[node name="Game" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 43)
zoom = Vector2(0.94, 0.94)

[node name="Player" parent="." instance=ExtResource("1_ebmjs")]
z_index = 5
position = Vector2(1, 0)
moveDistance = 10.0
turnDuration = 0.15
rotationSpeed = 25.0

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADz//v/AAACAAAAAADz//z/AAACAAAAAAD0//v/AAABAAAAAAD0//z/AAAAAAAAAAD1//v/AAAAAAAAAAD1//z/AAABAAAAAAD2//v/AAABAAAAAAD2//z/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAABAAAAAAD4//v/AAABAAAAAAD4//z/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAABAAAAAAD6//v/AAABAAAAAAD6//z/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAABAAAAAAD8//v/AAABAAAAAAD8//z/AAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAABAAAAAAD+//v/AAABAAAAAAD+//z/AAAAAAAAAAD///v/AAAAAAAAAAD///z/AAABAAAAAAAAAPv/AAABAAAAAAAAAPz/AAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAABAAAAAAACAPv/AAABAAAAAAACAPz/AAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAABAAAAAAAEAPv/AAABAAAAAAAEAPz/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAABAAAAAAAGAPv/AAABAAAAAAAGAPz/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAABAAAAAAAIAPv/AAABAAAAAAAIAPz/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAABAAAAAAAKAPv/AAABAAAAAAAKAPz/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAABAAAAAAAMAPv/AAACAAAAAAAMAPz/AAACAAAAAADz//n/AAACAAAAAADz//r/AAACAAAAAAD0//n/AAACAAAAAAD0//r/AAAAAAAAAAD1//n/AAACAAAAAAD1//r/AAABAAAAAAD2//n/AAACAAAAAAD2//r/AAAAAAAAAAD3//n/AAACAAAAAAD3//r/AAABAAAAAAD4//n/AAACAAAAAAD4//r/AAAAAAAAAAD5//n/AAACAAAAAAD5//r/AAABAAAAAAD6//n/AAACAAAAAAD6//r/AAAAAAAAAAD7//n/AAACAAAAAAD7//r/AAABAAAAAAD8//n/AAACAAAAAAD8//r/AAAAAAAAAAD9//n/AAACAAAAAAD9//r/AAABAAAAAAD+//n/AAACAAAAAAD+//r/AAAAAAAAAAD///n/AAACAAAAAAD///r/AAABAAAAAAAAAPn/AAACAAAAAAAAAPr/AAAAAAAAAAABAPn/AAACAAAAAAABAPr/AAABAAAAAAACAPn/AAACAAAAAAACAPr/AAAAAAAAAAADAPn/AAACAAAAAAADAPr/AAABAAAAAAAEAPn/AAACAAAAAAAEAPr/AAAAAAAAAAAFAPn/AAACAAAAAAAFAPr/AAABAAAAAAAGAPn/AAACAAAAAAAGAPr/AAAAAAAAAAAHAPn/AAACAAAAAAAHAPr/AAABAAAAAAAIAPn/AAACAAAAAAAIAPr/AAAAAAAAAAAJAPn/AAACAAAAAAAJAPr/AAABAAAAAAAKAPn/AAACAAAAAAAKAPr/AAAAAAAAAAALAPn/AAACAAAAAAALAPr/AAABAAAAAAAMAPn/AAACAAAAAAAMAPr/AAACAAAAAADz//3/AAACAAAAAADz//7/AAACAAAAAADz////AAACAAAAAADz/wAAAAACAAAAAAD0//3/AAABAAAAAAD0//7/AAAAAAAAAAD0////AAABAAAAAAD0/wAAAAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAABAAAAAAD1////AAAAAAAAAAD1/wAAAAABAAAAAAD2//3/AAABAAAAAAD2//7/AAAAAAAAAAD2////AAABAAAAAAD2/wAAAAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAABAAAAAAD3////AAAAAAAAAAD3/wAAAAABAAAAAAD4//3/AAABAAAAAAD4//7/AAAAAAAAAAD4////AAABAAAAAAD4/wAAAAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAABAAAAAAD5////AAAAAAAAAAD5/wAAAAABAAAAAAD6//3/AAABAAAAAAD6//7/AAAAAAAAAAD6////AAABAAAAAAD6/wAAAAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAABAAAAAAD7////AAAAAAAAAAD7/wAAAAABAAAAAAD8//3/AAABAAAAAAD8//7/AAAAAAAAAAD8////AAABAAAAAAD8/wAAAAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAABAAAAAAD9////AAAAAAAAAAD9/wAAAAABAAAAAAD+//3/AAABAAAAAAD+//7/AAAAAAAAAAD+////AAABAAAAAAD+/wAAAAAAAAAAAAD///3/AAAAAAAAAAD///7/AAABAAAAAAD/////AAAAAAAAAAD//wAAAAABAAAAAAAAAP3/AAABAAAAAAAAAP7/AAAAAAAAAAAAAP//AAABAAAAAAAAAAAAAAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAABAAAAAAABAP//AAAAAAAAAAABAAAAAAABAAAAAAACAP3/AAABAAAAAAACAP7/AAAAAAAAAAACAP//AAABAAAAAAACAAAAAAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAABAAAAAAADAP//AAAAAAAAAAADAAAAAAABAAAAAAAEAP3/AAABAAAAAAAEAP7/AAAAAAAAAAAEAP//AAABAAAAAAAEAAAAAAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAABAAAAAAAFAP//AAAAAAAAAAAFAAAAAAABAAAAAAAGAP3/AAABAAAAAAAGAP7/AAAAAAAAAAAGAP//AAABAAAAAAAGAAAAAAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAABAAAAAAAHAP//AAAAAAAAAAAHAAAAAAABAAAAAAAIAP3/AAABAAAAAAAIAP7/AAAAAAAAAAAIAP//AAABAAAAAAAIAAAAAAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAABAAAAAAAJAP//AAAAAAAAAAAJAAAAAAABAAAAAAAKAP3/AAABAAAAAAAKAP7/AAAAAAAAAAAKAP//AAABAAAAAAAKAAAAAAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAABAAAAAAALAP//AAAAAAAAAAALAAAAAAABAAAAAAAMAP3/AAACAAAAAAAMAP7/AAACAAAAAAAMAP//AAACAAAAAAAMAAAAAAACAAAAAADz/wEAAAACAAAAAADz/wIAAAACAAAAAADz/wMAAAACAAAAAADz/wQAAAACAAAAAADz/wUAAAACAAAAAADz/wYAAAACAAAAAADz/wcAAAACAAAAAADz/wgAAAACAAAAAAD0/wEAAAABAAAAAAD0/wIAAAAAAAAAAAD0/wMAAAABAAAAAAD0/wQAAAAAAAAAAAD0/wUAAAABAAAAAAD0/wYAAAAAAAAAAAD0/wcAAAABAAAAAAD0/wgAAAACAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAABAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAABAAAAAAD1/wUAAAAAAAAAAAD1/wYAAAABAAAAAAD1/wcAAAAAAAAAAAD1/wgAAAACAAAAAAD2/wEAAAABAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAABAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAABAAAAAAD2/wYAAAAAAAAAAAD2/wcAAAABAAAAAAD2/wgAAAACAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAABAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAABAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAABAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAACAAAAAAD4/wEAAAABAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAABAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAABAAAAAAD4/wYAAAAAAAAAAAD4/wcAAAABAAAAAAD4/wgAAAACAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAABAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAABAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAABAAAAAAD5/wcAAAAAAAAAAAD5/wgAAAACAAAAAAD6/wEAAAABAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAABAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAABAAAAAAD6/wYAAAAAAAAAAAD6/wcAAAABAAAAAAD6/wgAAAACAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAABAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAABAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAABAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAACAAAAAAD8/wEAAAABAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAABAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAABAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAABAAAAAAD8/wgAAAACAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAABAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAABAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAABAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAACAAAAAAD+/wEAAAABAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAABAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAABAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAABAAAAAAD+/wgAAAACAAAAAAD//wEAAAAAAAAAAAD//wIAAAABAAAAAAD//wMAAAAAAAAAAAD//wQAAAABAAAAAAD//wUAAAAAAAAAAAD//wYAAAABAAAAAAD//wcAAAAAAAAAAAD//wgAAAACAAAAAAAAAAEAAAABAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAABAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAABAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAABAAAAAAAAAAgAAAACAAAAAAABAAEAAAAAAAAAAAABAAIAAAABAAAAAAABAAMAAAAAAAAAAAABAAQAAAABAAAAAAABAAUAAAAAAAAAAAABAAYAAAABAAAAAAABAAcAAAAAAAAAAAABAAgAAAACAAAAAAACAAEAAAABAAAAAAACAAIAAAAAAAAAAAACAAMAAAABAAAAAAACAAQAAAAAAAAAAAACAAUAAAABAAAAAAACAAYAAAAAAAAAAAACAAcAAAABAAAAAAACAAgAAAACAAAAAAADAAEAAAAAAAAAAAADAAIAAAABAAAAAAADAAMAAAAAAAAAAAADAAQAAAABAAAAAAADAAUAAAAAAAAAAAADAAYAAAABAAAAAAADAAcAAAAAAAAAAAADAAgAAAACAAAAAAAEAAEAAAABAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAABAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAABAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAABAAAAAAAEAAgAAAACAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAABAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAABAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAABAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAACAAAAAAAGAAEAAAABAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAABAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAABAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAABAAAAAAAGAAgAAAACAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAABAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAABAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAABAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAACAAAAAAAIAAEAAAABAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAABAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAABAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAABAAAAAAAIAAgAAAACAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAABAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAABAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAABAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAACAAAAAAAKAAEAAAABAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAABAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAABAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAABAAAAAAAKAAgAAAACAAAAAAALAAEAAAAAAAAAAAALAAIAAAABAAAAAAALAAMAAAAAAAAAAAALAAQAAAABAAAAAAALAAUAAAAAAAAAAAALAAYAAAABAAAAAAALAAcAAAAAAAAAAAALAAgAAAACAAAAAAAMAAEAAAACAAAAAAAMAAIAAAACAAAAAAAMAAMAAAACAAAAAAAMAAQAAAACAAAAAAAMAAUAAAACAAAAAAAMAAYAAAACAAAAAAAMAAcAAAACAAAAAAAMAAgAAAACAAAAAADy/wgAAAACAAAAAADy/wcAAAACAAAAAADy/wYAAAACAAAAAADy/wUAAAACAAAAAADy/wQAAAACAAAAAADy/wMAAAACAAAAAADy/wIAAAACAAAAAADy/wEAAAACAAAAAADy/wAAAAACAAAAAADy////AAACAAAAAADy//7/AAACAAAAAADy//3/AAACAAAAAADy//z/AAACAAAAAADy//v/AAACAAAAAADy//r/AAACAAAAAADy//n/AAACAAAAAAANAAgAAAACAAAAAAANAAcAAAACAAAAAAANAAYAAAACAAAAAAANAAUAAAACAAAAAAANAAQAAAACAAAAAAANAAMAAAACAAAAAAANAAIAAAACAAAAAAANAAEAAAACAAAAAAANAAAAAAACAAAAAAANAP//AAACAAAAAAANAP7/AAACAAAAAAANAP3/AAACAAAAAAANAPz/AAACAAAAAAANAPv/AAACAAAAAAANAPr/AAACAAAAAAANAPn/AAACAAAAAAA=")
tile_set = SubResource("TileSet_3dryh")
collision_enabled = false
script = SubResource("GDScript_3dryh")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_wrm1d")

[node name="ScoreLabel" type="Label" parent="GameManager"]
offset_left = -590.0
offset_top = -289.0
offset_right = 2836.0
offset_bottom = 557.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("5_wowpa")
theme_override_font_sizes/font_size = 661
text = "Score: 0"

[node name="WorldBorder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorder"]
shape = SubResource("WorldBoundaryShape2D_wowpa")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBorder"]
rotation = 4.71239
shape = SubResource("WorldBoundaryShape2D_i6g32")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldBorder"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_1l0tm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldBorder"]
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_v158k")

[node name="Apple" parent="." instance=ExtResource("6_i6g32")]
position = Vector2(345, -23)

[connection signal="area_shape_entered" from="WorldBorder" to="GameManager" method="_on_world_border_area_shape_entered"]
[connection signal="area_shape_entered" from="WorldBorder" to="WorldBorder" method="_on_area_shape_entered"]
[connection signal="body_entered" from="WorldBorder" to="WorldBorder" method="_on_body_entered"]
[connection signal="area_shape_entered" from="Apple" to="Player" method="_on_apple_area_shape_entered"]
[connection signal="area_shape_entered" from="Apple" to="GameManager" method="_on_apple_area_shape_entered"]
